
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ S_ISDIR (unsigned int) ;
 int TREE_HAS_DUPS ;
 int TREE_UNORDERED ;
 int memcmp (char const*,char const*,int) ;
 int strlen (char const*) ;

__attribute__((used)) static int verify_ordered(unsigned mode1, const char *name1, unsigned mode2, const char *name2)
{
 int len1 = strlen(name1);
 int len2 = strlen(name2);
 int len = len1 < len2 ? len1 : len2;
 unsigned char c1, c2;
 int cmp;

 cmp = memcmp(name1, name2, len);
 if (cmp < 0)
  return 0;
 if (cmp > 0)
  return TREE_UNORDERED;






 c1 = name1[len];
 c2 = name2[len];
 if (!c1 && !c2)





  return TREE_HAS_DUPS;
 if (!c1 && S_ISDIR(mode1))
  c1 = '/';
 if (!c2 && S_ISDIR(mode2))
  c2 = '/';
 return c1 < c2 ? 0 : TREE_UNORDERED;
}
